objects/UnfollowRule__c.object
<CustomObject>
    <description>Create rules which are evaluated each night.  If any records match your rule criteria, all people following that rule will be unfollowed from that record.

For example: if you have a rule to unfollow cases 2 days after the status is set to Closed and a case with 2 followers closes today, 2 days from now both of those followers will be unfollowed from the case.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only Active rules are evaluated each night.  This lets you create rules that you only want to run periodically, not every night.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaysDelay__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If a number is entered, the rule will not unfollow people from records that match the criteria that night, but rather will wait the specified number of days.  

The maximum delay possible is 99 days.</description>
        <label>Unfollow Delay in Days (optional)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <description>This is the label that goes with a the field name.  For example: campaign member field HasResponded has a label of Responded.</description>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>This is the field that will be evaluated such as Stage for an Opportunity rule.</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <description>Stores Schema.DisplayType for the field selected to prevent running out of describes when building the batch Apex query from the rule criteria.  Type is needed to determine whether to use quotes or not (string fields need them, numbers don&apos;t).

Cannot be manually updated as the trigger will always overwrite (expected &amp; desirable behavior).</description>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectLabel__c</fullName>
        <description>Label of the object that corresponds to it&apos;s API name.  For example, custom objects have an ObjectName of something like Projects__c where the label might be Projects.</description>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>Name of the object such as Opportunity or Case.  This is the API name.</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>equals TODAY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Unfortunately this application does not support blank criteria such as Opportunity Account equals &lt;blank&gt;.  This is enforced in the code, not in a validation rule nor in the field definition itself.</description>
        <label>Unfollow Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chatter Unfollow Rules</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>ObjectLabel__c</columns>
        <columns>FieldLabel__c</columns>
        <columns>Operator__c</columns>
        <columns>Value__c</columns>
        <columns>DaysDelay__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Chatter Unfollow Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Unfollow Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_Commas</fullName>
        <active>true</active>
        <description>Disallows comma&apos;s in Value as my code doesn&apos;t support them</description>
        <errorConditionFormula>contains( Value__c, &quot;,&quot;)</errorConditionFormula>
        <errorMessage>Unfortunately, you cannot use a comma for either multiple values or numbers. Please remove any commas, and if desired, create a second rule for additional criteria.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Negative_Delay</fullName>
        <active>true</active>
        <description>Disallows negative numbers from DaysDelay</description>
        <errorConditionFormula>DaysDelay__c &lt;0</errorConditionFormula>
        <errorMessage>You cannot use a negative number for the Delay.  Please enter 0 or a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule_objectfield_operator_value_not_null</fullName>
        <active>true</active>
        <description>Checks that the rule has a valid object, field, operator, and value</description>
        <errorConditionFormula>ISNULL(ObjectName__c) ||ObjectName__c==&apos;&apos; || ISNULL(FieldName__c) ||FieldName__c==&apos;&apos; || ISNULL(text(Operator__c ))  || ISNULL(Value__c) || Value__c==&apos;&apos;</errorConditionFormula>
        <errorMessage>Error: You must select an object, field, operator, and value before saving. Blank or null values are not supported.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validate_operator</fullName>
        <active>true</active>
        <description>Note this doesn&apos;t check for hackers that try to use an invalid operator for a given field type such as &quot;boolean does not contain&quot;.  Checking for this in the trigger would create too many additional describes and hurt code coverage.</description>
        <errorConditionFormula>NOT( ISPICKVAL(Operator__c ,&apos;equals&apos;) 
||ISPICKVAL(Operator__c ,&apos;not equal to&apos;) 
||ISPICKVAL(Operator__c ,&apos;greater than&apos;)
||ISPICKVAL(Operator__c ,&apos;less than&apos;)
||ISPICKVAL(Operator__c ,&apos;greater or equal&apos;)
||ISPICKVAL(Operator__c ,&apos;less or equal&apos;)
||ISPICKVAL(Operator__c ,&apos;contains&apos;)
||ISPICKVAL(Operator__c ,&apos;does not contain&apos;)
||ISPICKVAL(Operator__c ,&apos;starts with&apos;)
||ISPICKVAL(Operator__c ,&apos;equals TODAY&apos;)
)</errorConditionFormula>
        <errorMessage>Error: Invalid operator entered.  You must select a valid operator such as &quot;equals&quot; or &quot;not equal to&quot;.</errorMessage>
    </validationRules>
</CustomObject>